2008-01-11  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: added an entry for 1.5.1.

	* extconf.rb: added Quartz backend check for -framework RubyCocoa.

	* src/rb_cairo.h:
	- RUBY_XXX -> RB_XXX.
	- added extern "C" {}.
	- added rb_cCairo_QuartzSurface.

	* src/cairo.def: rb_cCairo_QuartzSurface.

	* src/rb_cairo_surface.c: supported Quartz backend.

2007-12-29  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (cr_set_source_surface): fixed wrong type
	conversion.
	Reported by Binzo. Thanks!!!

	* README: updated Binzo entry in Thanks list.

2007-12-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (cr_pop_group): fixed a memory leak bug.
	Reported by Binzo. Thanks!!!

	* README: added Binzo to Thanks list.

2007-06-14  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb, src/rb_cairo_surface.c, src/rb_cairo_private.h: used
	rb_errinfo() and RSTRING_LEN() if available for supporting ruby
	1.9. Thanks to Paul van Tilburg!!!

	* README: added Paul van Tilburg to Thanks list.

2007-06-14  Paul van Tilburg  <paulvt@debian.org>

	* extconf.rb: used String#each_line instead of String#each for
	supporting ruby 1.9.

2007-06-03  Kouhei Sutou  <kou@cozmixng.org>

	* samples/agg/aa_test.rb: fixed wrong operation.

2007-05-29  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/context/path.rb: fixed typos.
	Thanks to NANKI Haruo!!!
	* README: added an entry for NANKI Haruo.

2007-05-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/context.rb, src/lib/cairo/context/triangle.rb:
	added a convenience method.

	* samples/agg/aa_test.rb: implemented random shapes test.

2007-05-27  Kouhei Sutou  <kou@cozmixng.org>

	* samples/agg/aa_test.rb: ported from AGG's example.

        * README: added some links for documentation.

	* src/rb_cairo.c: 1.5.0 -> 1.5.1.

	* Rakefile: improved current release NEWS extraction.

	* NEWS: updated.

	* Rakefile: supported document update.

	* src/depend (install-so): used install-so instead of install.
